<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background1"
    android:orientation="vertical"
    android:padding="32sp"
    tools:context=".activities.RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="54sp"
        android:layout_marginTop="160sp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/primary_color"
        android:textSize="45sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subtitle"
        android:textAlignment="center"
        android:textColor="@color/secondary_color"
        android:textSize="17sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/TextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="55sp"
        android:layout_marginTop="60sp"
        android:autofillHints="emailAddress"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/TextPassword"
        android:layout_width="match_parent"
        android:layout_height="55sp"
        android:layout_marginTop="8dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:passwordToggleEnabled="true" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/white"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="@color/primary_color"
        android:textSize="20sp"
        android:textStyle="bold"
        app:strokeColor="@color/buttonStroke"
        app:strokeWidth="2sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/already_account"
            android:textColor="@color/secondary_color"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/signinLabel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textColor="@color/primary_color"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>